# material-maker

./: .gitignore  CLAUDE.md  README.md  export_presets.cfg
.github/workflows/: mcp-ci.yml  mcp-publish.yml
addons/material_maker_mcp/: addon.gd
addons/material_maker_mcp/commands/: export.gd  graph.gd  parameters.gd  preview.gd  scene.gd  utils.gd  validation.gd
mcp_server/: README.md  TOOLS.md  pyproject.toml  spec.md  todo.md
mcp_server/src/material_maker_mcp/: connection.py  server.py
mcp_server/tests/: conftest.py  test_connection.py  test_tools.py
