[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "material-maker-mcp"
version = "0.1.0"
description = "MCP server for Material Maker — AI-driven procedural texture creation"
license = "MIT"
requires-python = ">= 3.10"
authors = [
    { name = "Derek", email = "derek.r.higgins@gmail.com" },
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.4.0",
    "mypy>=1.0",
]

[project.scripts]
material-maker-mcp = "material_maker_mcp.server:main"

[project.urls]
Homepage = "https://github.com/derekrhiggins/material-maker-mcp"
Repository = "https://github.com/derekrhiggins/material-maker-mcp"
Issues = "https://github.com/derekrhiggins/material-maker-mcp/issues"

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
